[tool.poetry]
name = "disaster-prediction"
version = "0.1.0"
description = "project to build an anamoly detection model to detect outliers to establish distress in rural areas in India"
authors = ["suryakandukuri <sudham.surya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
ipykernel = "^6.29.5"
pandas-profiling = "^3.6.6"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
ydata-profiling = "^4.12.0"
pyspark = "^3.5.3"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
