[tool.poetry]
name = "hmis-anamoly-detection"
version = "0.1.0"
description = "project to build an anamoly detection model to detect outliers to establish distress in rural areas in India"
authors = ["suryakandukuri <sudham.surya@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<=3.13.1"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pyspark = "^3.5.3"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
numpy = {version = "2.2.2", source = "pypi"}
polars = "^1.20.0"
pyarrow = "^19.0.0"
plotly = "^5.24.1"
nbformat = ">=4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
